--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
     "test": "test"
   },
   "scripts": {
-    "test": "pnpm run build:ts && tsc -p test/tsconfig.json && c8 node --test -r ts-node/register test/**/*.ts",
-    "start": "pnpm run build:ts && fastify start -l info dist/app.js",
-    "build:ts": "tsc",
+    "test": "pnpm run build && tsc -p test/tsconfig.json && c8 node --test -r ts-node/register test/**/*.ts",
+    "start": "pnpm run build && fastify start -l info dist/app.js",
+    "build": "tsc",
     "watch:ts": "tsc -w",
-    "dev": "pnpm run build:ts && concurrently -k -p \"[{name}]\" -n \"TypeScript,App\" -c \"yellow.bold,cyan.bold\" \"npm:watch:ts\" \"npm:dev:start\"",
+    "dev": "pnpm run build && concurrently -k -p \"[{name}]\" -n \"TypeScript,App\" -c \"yellow.bold,cyan.bold\" \"npm:watch:ts\" \"npm:dev:start\"",
     "dev:start": "fastify start --ignore-watch=.ts$ -w -l info -P --port 4000 dist/app.js"
   },
   "keywords": [],
