--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "fastify-type-provider-zod": "^1.1.9",
     "langchain": "^0.1.36",
     "pdf-parse": "^1.1.1",
-    "zod": "^3.23.6"
+    "zod": "^3.23.6",
+    "typescript": "^5.2.2"
   },
   "devDependencies": {
     "@types/node": "^20.4.4",
