--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "build": "tsc",
     "watch:ts": "tsc -w",
     "dev": "pnpm run build && concurrently -k -p \"[{name}]\" -n \"TypeScript,App\" -c \"yellow.bold,cyan.bold\" \"npm:watch:ts\" \"npm:dev:start\"",
-    "dev:start": "fastify start --ignore-watch=.ts$ -w -l info -P --port 4000 dist/app.js"
+    "dev:start": "fastify start --ignore-watch=.ts$ -w -l info -P --port 4000 dist/app.js",
+    "postinstall": "npm run build",
+    "tsc": "./node_modules/typescript/bin/tsc"
   },
   "keywords": [],
   "author": "",
