--- a/package.json
+++ b/package.json
@@ -7,13 +7,13 @@
     "test": "test"
   },
   "scripts": {
-    "test": "pnpm run build && tsc -p test/tsconfig.json && c8 node --test -r ts-node/register test/**/*.ts",
-    "start": "pnpm run build && fastify start -l info dist/app.js",
-    "build": "tsc",
+    "test": "pnpm run build:ts && tsc -p test/tsconfig.json && c8 node --test -r ts-node/register test/**/*.ts",
+    "start": "pnpm run build:ts && fastify start -l info dist/app.js",
+    "build:ts": "tsc",
     "watch:ts": "tsc -w",
-    "dev": "pnpm run build && concurrently -k -p \"[{name}]\" -n \"TypeScript,App\" -c \"yellow.bold,cyan.bold\" \"npm:watch:ts\" \"npm:dev:start\"",
+    "dev": "pnpm run build:ts && concurrently -k -p \"[{name}]\" -n \"TypeScript,App\" -c \"yellow.bold,cyan.bold\" \"npm:watch:ts\" \"npm:dev:start\"",
     "dev:start": "fastify start --ignore-watch=.ts$ -w -l info -P --port 4000 dist/app.js",
-    "postinstall": "npm run build",
+    "postinstall": "pnpm run build:ts",
     "tsc": "./node_modules/typescript/bin/tsc"
   },
   "keywords": [],
@@ -36,8 +36,7 @@
     "fastify-type-provider-zod": "^1.1.9",
     "langchain": "^0.1.36",
     "pdf-parse": "^1.1.1",
-    "zod": "^3.23.6",
-    "typescript": "^5.2.2"
+    "zod": "^3.23.6"
   },
   "devDependencies": {
     "@types/node": "^20.4.4",
