--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "This project was bootstrapped with Fastify-CLI.",
   "main": "app.ts",
-  "engine": {
+  "engines": {
     "node": ">=18.0.0"
   },
   "directories": {
